# XMath

./: CMakeLists.txt  Complex.cpp  Complex.h  Matrix.cpp  Matrix.h  Numerical.cpp  Numerical.h  Polynomial.cpp  README.md  Vector.h  main.cpp
core/: core.h
ext/: Image.cpp  Image.h  ImageProc.h  Matrix.h  Vector.h  global.h
ext/Graphics/: MathUtils.h
ext/ImageProc/: Image.cpp  Image.h  ImageProc.h
src/: Complex.cpp  Complex.h  Interpolation.cpp  Interpolation.h  Matrix.h  Numerical.cpp  Point.cpp  Point.h  Polynomial.cpp  Polynomial.h  Vector.h  global.h
